# ExamGenie

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
examgenie/: .env.example  explanation_generator.py  llm_client.py  main.py  models.py  output_generator.py  pdf_extractor.py  rag_system.py  topic_analyzer.py
